data/derived/comb/progs/unify/prog7633.ml.out
Characters 73-74:
  let fixpoint (f,b) = wwhile (let n x = let ff = f  in (ff , x = ff x) in n,b);;
                                                                           ^
Error: This expression has type 'a -> ('a -> 'a) * bool
       but an expression was expected of type 'a -> 'a * bool
       The type variable 'a occurs inside 'a -> 'a
